force-app/main/default/objects/Man_hour__c/Man_hour__c.object-meta.xml
<CustomObject>
    <label>Man hour</label>
    <nameField>
        <displayFormat>MH{YY}{MM}-{00000}</displayFormat>
        <label>Man hour No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Man hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>