force-app/main/default/objects/Man_hour__c/fields/Application_Item__c.field-meta.xml
<CustomField>
    <fullName>Application_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The leave or overtime request this booking came from. Added so that undoing an approval can find and remove exactly the rows it created, rather than guessing from the date and remark and risking someone else's timesheet entry. Blank on rows booked by hand or created before this field existed.</description>
    <inlineHelpText>The request that generated this booking. Blank if it was entered by hand.</inlineHelpText>
    <label>Application Item</label>
    <referenceTo>ApplicationItem__c</referenceTo>
    <relationshipLabel>Man Hours</relationshipLabel>
    <relationshipName>Man_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>