force-app/main/default/objects/Man_hour__c/fields/Is_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Is_Engineer__c</fullName>
    <formula>CONTAINS( ProjectAssign_No__r.Assignee__r.UserRole.Name , &quot;Engineer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Engineer</label>
    <type>Checkbox</type>
</CustomField>