force-app/main/default/objects/Man_hour__c/fields/Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>Performed_Date__c</fullName>
    <label>Performed Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>