force-app/main/default/objects/Man_hour__c/fields/Performed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Performed_Hours__c</fullName>
    <defaultValue>00.00</defaultValue>
    <label>Performed Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>