force-app/main/default/objects/Man_hour__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>ProjectAssign_No__r.Project_No__r.Project_Name__c</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>