force-app/main/default/objects/Man_hour__c/fields/Project_No__c.field-meta.xml
<CustomField>
    <fullName>Project_No__c</fullName>
    <formula>ProjectAssign_No__r.Project_No__r.Name</formula>
    <label>Project No.</label>
    <type>Text</type>
</CustomField>