force-app/main/default/objects/Man_hour__c/fields/ProjectAssign_Name__c.field-meta.xml
<CustomField>
    <fullName>ProjectAssign_Name__c</fullName>
    <formula>ProjectAssign_No__r.Project_No__c</formula>
    <label>ProjectAssign Name</label>
    <type>Text</type>
</CustomField>