force-app/main/default/objects/Man_hour__c/fields/ProjectAssign_No__c.field-meta.xml
<CustomField>
    <fullName>ProjectAssign_No__c</fullName>
    <label>ProjectAssign No.</label>
    <referenceTo>ProjectAssign__c</referenceTo>
    <relationshipLabel>Man hours</relationshipLabel>
    <relationshipName>Man_hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>