force-app/main/default/objects/Man_hour__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <label>Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>